--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ header {
     background-color: #2c3e50;
     color: white;
     padding: 20px 0;
+    align-content: end;
 }
 .container {
     max-width: 1000px;
